--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: Roboto;
-    overflow: hidden;
+    overflow-x: hidden;
     text-decoration:none;
 }
 h1{
@@ -19,26 +19,29 @@ h2{
 h3{
 
 }
-.main-text{
+
+.main-text{overflow: hidden;
     position: absolute;
     width: 105%;
     height: 105%;
+    min-height: 967px;
     color: white;
     font-size: 480pt;
     transition: 2s;
     opacity: 0;
     z-index: 0;
     font-weight: 700;
-    left: -45px;
-    top: -30px;
+    padding-left: -45px;
+    margin-top: -30px;
     line-height: 0.82;
     transition: 2s;
+    
 }
-.background-slider {
+.background-slider {overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    min-height: 967px;
     z-index: 1;
     opacity: 0;
     transition: 2s;
@@ -51,23 +54,27 @@ h3{
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    min-height: 967px;
+    
     z-index: 2;
 }
-.background-start__color{
+.background-start__color{overflow-y: auto;
     position: absolute;
     width: 100%;
     height: 100%;
+    min-height: 967px;
     z-index: 2;
     background-color: yellow;
     animation: colors 3s  forwards;
 }
-.wall{
+.wall{overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
+    min-height: 967px;
     animation: dark 2s ;
     z-index: 4;
+    overflow-y: auto;
 }
 .wall__text{
     position: absolute;
@@ -78,7 +85,14 @@ h3{
     opacity: 1;
     animation: move 5s forwards;
 }
-.works-button{
+.wArea{overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    min-height: 967px;
+    z-index: 3;
+}
+.wArea__works-button{overflow: hidden;
     position: absolute;
     width: 16%;
     height: 8%;
@@ -97,12 +111,13 @@ h3{
     animation-delay: 3s;
     box-shadow: 2px 2px 5px black;
     cursor:pointer;
-
+    
 }
-.gallery{
+.gallery{overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
+    min-height: 967px;
     background-color: black;
     opacity: 0;
     z-index: 0;
@@ -113,20 +128,28 @@ h3{
     position: absolute;
     top:3.5%;
     left: 1%;
+    cursor: pointer;
 }
 .gallery__exit{
+    display: grid;
+    width: 100%;
+    height: 10%;
+    top:-1%;
+    justify-content: flex-end;
+    align-content: flex-start;
     position: absolute;
-    left: 37.5%;
-    top:3.5%;
     cursor:pointer;
+    opacity: 0.2;
 }
 .gallery__exit h1{
     color: #ffec59;
     font-size: 60pt;
+    font-weight: 700;
 }
 .owl-carousel{
     top: 20%;
     cursor:pointer;
+    
 }
 .owl__items{
     width: 100%;
@@ -134,8 +157,9 @@ h3{
 .menu{
     position: absolute;
     display: grid;
-    width: 20%;
+    width: 40%;
     height: 100%;
+    min-height: 967px;
     align-content: center;
     z-index: 0;
     cursor: pointer;
@@ -163,17 +187,19 @@ h3{
     align-content: center;
     font-size: 20pt;
 }
-.author{
+.author{overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
+    min-height: 967px;
     display: none;
     z-index: 80;
     opacity: 0;
     transition: 0.5s;
     background-color: #ffec59;
+    
 }
-.author__line{
+.author__line{overflow: hidden;
     position: absolute;
     width: 20%;
     left: 80%;
@@ -215,33 +241,37 @@ h3{
     font-weight: 400;
     opacity: 0;
 }
-.author__photo{
+.author__photo{overflow: hidden;
     position: absolute;
     transition: 0.5s;
     width: 36%;
     height: 95%;
+    min-height: 1000px;
     top:5%;
     left: 42%;
     display: grid;
     justify-content: center;
     align-content: center;
+    
 }
 .author__photo img{
     width: 100%;
 }
 
 
-.price{
+.price{overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
+    min-height: 967px;
     display: none;
     z-index: 80;
     opacity: 0;
     transition: 0.5s;
     background-color: #3f50af;
+    
 }
-.price__line{
+.price__line{overflow: hidden;
     position: absolute;
     width: 20%;
     left: 80%;
@@ -254,6 +284,7 @@ h3{
     color: #2f3c86;
     writing-mode: vertical-lr;
     cursor: pointer;
+    
 }
 .price__line:hover{
     background-color: #2f3c86;
@@ -267,6 +298,7 @@ h3{
     font-weight: 700;
     font-size: 100pt;
     top: -100%;
+    
 }
 .price__text{
     position: absolute;
@@ -282,8 +314,9 @@ h3{
     font-size: 20pt;
     font-weight: 400;
     opacity: 0;
+    
 }
-.price__icon-back{
+.price__icon-back{overflow: hidden;
     position: absolute;
     transition: 0.5s;
     width: 60%;
@@ -291,35 +324,39 @@ h3{
     color: white;
     opacity: 0.1;
     font-size: 770pt;
+    
 }
-.price__photo-standart{
+.price__photo-standart{overflow: hidden;
     position: absolute;
     transition: 0.5s;
     width: 80%;
     height: 26.7%;
     top:20%;
     opacity: 0.3;
+    
 }
 .price__photo-standart img{
     width: 100%;
 }
-.price__photo-studio{
+.price__photo-studio{overflow: hidden;
     position: absolute;
     transition: 0.5s;
     width: 80%;
     height: 26.7%;
     top:46.6%;
+    
     opacity: 0.3;
 }
 .price__photo-studio img{
     width: 100%;
 }
-.price__photo-lovestory{
+.price__photo-lovestory{overflow: hidden;
     position: absolute;
     transition: 0.5s;
     width: 80%;
     height: 26.7%;
     top:73.3%;
+    
     opacity: 0.3;
 }
 .price__photo-lovestory img{
@@ -336,6 +373,7 @@ h3{
     color: white;
     font-size: 70pt;
     display: grid;
+    
     align-content: end;
     font-weight: 700;
     margin-left: 15px;
@@ -348,6 +386,7 @@ h3{
     top:46.6%;
     opacity: 0.8;
     color: white;
+    
     font-size: 70pt;
     display: grid;
     align-content: end;
@@ -358,6 +397,7 @@ h3{
     position: absolute;
     transition: 0.5s;
     width: 80%;
+    
     height: 26.7%;
     top:73.3%;
     opacity: 0.8;
@@ -371,17 +411,19 @@ h3{
 
 
 
-.contacts{
+.contacts{overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
+    min-height: 967px;
     display: none;
     z-index: 80;
     opacity: 0;
     transition: 0.5s;
+    
     background-color: #e83737;
 }
-.contacts__line{
+.contacts__line{overflow: hidden;
     position: absolute;
     width: 20%;
     left: 80%;
@@ -411,7 +453,7 @@ h3{
 .contacts__text{
     position: absolute;
     transition: 0.5s;
-    width: 40%;
+    width: 80%;
     height: 80%;
     top:30%;
     left: 5%;
@@ -419,6 +461,7 @@ h3{
     font-size: 50pt;
     font-weight: 400;
     opacity: 0;
+    
     float:left;
 }
 .contacts__text a{
@@ -432,7 +475,7 @@ h3{
     width: 80px;
     float:left;
 }
-.contacts__icon-back-vk{
+.contacts__icon-back-vk{overflow: hidden;
     position: absolute;
     transition: 0.5s;
     width: 60%;
@@ -440,6 +483,7 @@ h3{
     top:10%;
     left: -10%;
     opacity: 0.1;
+    
 }
 .contacts__icon-back-vk img{
     width: 100%;
